--- a/GameEditor/Base.lproj/ValueEditors.xib
+++ b/GameEditor/Base.lproj/ValueEditors.xib
@@ -423,7 +423,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="172" height="17"/>
                     <color key="color" red="0.05813049898" green="0.055541899059999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <connections>
-                        <binding destination="Nhn-ML-Yi0" name="value" keyPath="objectValue.color" id="lgt-l3-lNf"/>
+                        <binding destination="Nhn-ML-Yi0" name="value" keyPath="objectValue.value" id="i5v-Q3-TQ6"/>
                     </connections>
                 </colorWell>
             </subviews>
