--- a/GameEditor/Base.lproj/ValueEditors.xib
+++ b/GameEditor/Base.lproj/ValueEditors.xib
@@ -8,7 +8,7 @@
         <customObject id="-2" userLabel="File's Owner"/>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <tableCellView identifier="{CGPoint=dd}" id="GbV-qK-Vp4" userLabel="{CGPoint=dd}">
+        <tableCellView identifier="{CGPoint=dd}" id="GbV-qK-Vp4" userLabel="{CGPoint=dd}" customClass="FloatsTableCellView">
             <rect key="frame" x="0.0" y="0.0" width="172" height="30"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -16,7 +16,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="172" height="30"/>
                     <subviews>
                         <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="jzj-QV-oE2" userLabel="X" customClass="StepperTextField">
-                            <rect key="frame" x="0.0" y="11" width="86" height="19"/>
+                            <rect key="frame" x="0.0" y="11" width="87" height="19"/>
                             <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="center" title="X" bezelStyle="round" id="TVF-ca-BP1">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -34,7 +34,7 @@
                             </connections>
                         </textField>
                         <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Ut6-h1-1dS" userLabel="Y" customClass="StepperTextField">
-                            <rect key="frame" x="86" y="11" width="86" height="19"/>
+                            <rect key="frame" x="87" y="11" width="85" height="19"/>
                             <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" title="Y" bezelStyle="round" id="ZnM-vW-FvB">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -52,16 +52,16 @@
                             </connections>
                         </textField>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="pEa-Ah-cwv">
-                            <rect key="frame" x="35" y="-1" width="16" height="14"/>
-                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="X" id="Gyx-WL-Cwq">
+                            <rect key="frame" x="25" y="-1" width="37" height="14"/>
+                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Label" id="Gyx-WL-Cwq">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="B8J-Qm-Hmk">
-                            <rect key="frame" x="121" y="-1" width="16" height="14"/>
-                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Y" id="CvK-Al-wlF">
+                            <rect key="frame" x="111" y="-1" width="37" height="14"/>
+                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Label" id="CvK-Al-wlF">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -93,7 +93,7 @@
             </connections>
             <point key="canvasLocation" x="445" y="513"/>
         </tableCellView>
-        <tableCellView identifier="{CGSize=dd}" id="jGQ-Ay-x9R" userLabel="{CGSize=dd}">
+        <tableCellView identifier="{CGSize=dd}" id="jGQ-Ay-x9R" userLabel="{CGSize=dd}" customClass="FloatsTableCellView">
             <rect key="frame" x="0.0" y="0.0" width="172" height="30"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -132,21 +132,21 @@
                                 <userDefinedRuntimeAttribute type="image" keyPath="alternateDec" value="AltDecreaseStepper"/>
                             </userDefinedRuntimeAttributes>
                             <connections>
-                                <binding destination="jGQ-Ay-x9R" name="editable" keyPath="objectValue.isEditable" id="saA-rd-JCq"/>
                                 <binding destination="jGQ-Ay-x9R" name="value" keyPath="objectValue.height" id="Pd7-yo-vnU"/>
+                                <binding destination="jGQ-Ay-x9R" name="editable" keyPath="objectValue.isEditable" id="saA-rd-JCq"/>
                             </connections>
                         </textField>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="M01-dK-Mhp">
-                            <rect key="frame" x="34" y="-1" width="19" height="14"/>
-                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="W" id="haQ-6U-PP9">
+                            <rect key="frame" x="25" y="-1" width="37" height="14"/>
+                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Label" id="haQ-6U-PP9">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="T9B-bn-J1V">
-                            <rect key="frame" x="121" y="-1" width="17" height="14"/>
-                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="H" id="AbT-YK-lO0">
+                            <rect key="frame" x="111" y="-1" width="37" height="14"/>
+                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Label" id="AbT-YK-lO0">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -178,7 +178,7 @@
             </connections>
             <point key="canvasLocation" x="445" y="605"/>
         </tableCellView>
-        <tableCellView identifier="degrees" id="a63-cn-NOW" userLabel="degrees">
+        <tableCellView identifier="degrees" id="a63-cn-NOW" userLabel="degrees" customClass="FloatsTableCellView">
             <rect key="frame" x="0.0" y="0.0" width="172" height="17"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -211,7 +211,7 @@
             </connections>
             <point key="canvasLocation" x="445" y="256.5"/>
         </tableCellView>
-        <tableCellView identifier="d" id="f3Z-oW-3C9" userLabel="d">
+        <tableCellView identifier="d" id="f3Z-oW-3C9" userLabel="d" customClass="FloatsTableCellView">
             <rect key="frame" x="0.0" y="0.0" width="172" height="17"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -268,7 +268,7 @@
                 <constraint firstItem="YBc-RN-b4y" firstAttribute="leading" secondItem="toe-NG-Bn9" secondAttribute="leading" id="WrL-bb-Q9Q"/>
             </constraints>
         </tableCellView>
-        <tableCellView identifier="{CGRect={CGPoint=dd}{CGSize=dd}}" id="dHV-ME-csG" userLabel="{CGRect={CGPoint=dd}{CGSize=dd}}">
+        <tableCellView identifier="{CGRect={CGPoint=dd}{CGSize=dd}}" id="dHV-ME-csG" userLabel="{CGRect={CGPoint=dd}{CGSize=dd}}" customClass="FloatsTableCellView">
             <rect key="frame" x="0.0" y="0.0" width="172" height="64"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -312,16 +312,16 @@
                             </connections>
                         </textField>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ogW-tN-3gu">
-                            <rect key="frame" x="35" y="33" width="16" height="14"/>
-                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="X" id="G8F-Sn-bA4">
+                            <rect key="frame" x="25" y="33" width="37" height="14"/>
+                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Label" id="G8F-Sn-bA4">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="MtY-Av-tje">
-                            <rect key="frame" x="121" y="33" width="16" height="14"/>
-                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Y" id="NpB-oY-OkB">
+                            <rect key="frame" x="111" y="33" width="37" height="14"/>
+                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Label" id="NpB-oY-OkB">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -346,8 +346,8 @@
                             </connections>
                         </textField>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="zC2-vy-1Mk">
-                            <rect key="frame" x="121" y="0.0" width="17" height="14"/>
-                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="H" id="NwL-0O-Kg5">
+                            <rect key="frame" x="111" y="0.0" width="37" height="14"/>
+                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Label" id="NwL-0O-Kg5">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -372,8 +372,8 @@
                             </connections>
                         </textField>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="fWE-Zh-8rP">
-                            <rect key="frame" x="34" y="0.0" width="19" height="14"/>
-                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="W" id="Vro-ft-nD5">
+                            <rect key="frame" x="25" y="0.0" width="37" height="14"/>
+                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Label" id="Vro-ft-nD5">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
