--- a/GameEditor/Base.lproj/ValueEditors.xib
+++ b/GameEditor/Base.lproj/ValueEditors.xib
@@ -8,7 +8,7 @@
         <customObject id="-2" userLabel="File's Owner"/>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <tableCellView identifier="{CGPoint=dd}" id="GbV-qK-Vp4" userLabel="{CGPoint=dd}" customClass="FloatsTableCellView">
+        <tableCellView identifier="{CGPoint=dd}" id="GbV-qK-Vp4" userLabel="{CGPoint=dd}">
             <rect key="frame" x="0.0" y="0.0" width="172" height="30"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -58,6 +58,9 @@
                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
+                            <connections>
+                                <binding destination="GbV-qK-Vp4" name="value" keyPath="objectValue.label1" id="oYA-7d-fUx"/>
+                            </connections>
                         </textField>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="B8J-Qm-Hmk">
                             <rect key="frame" x="111" y="-1" width="37" height="14"/>
@@ -66,6 +69,9 @@
                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
+                            <connections>
+                                <binding destination="GbV-qK-Vp4" name="value" keyPath="objectValue.label2" id="4Yb-A3-jri"/>
+                            </connections>
                         </textField>
                     </subviews>
                     <constraints>
@@ -93,7 +99,7 @@
             </connections>
             <point key="canvasLocation" x="445" y="513"/>
         </tableCellView>
-        <tableCellView identifier="{CGSize=dd}" id="jGQ-Ay-x9R" userLabel="{CGSize=dd}" customClass="FloatsTableCellView">
+        <tableCellView identifier="{CGSize=dd}" id="jGQ-Ay-x9R" userLabel="{CGSize=dd}">
             <rect key="frame" x="0.0" y="0.0" width="172" height="30"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -143,6 +149,9 @@
                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
+                            <connections>
+                                <binding destination="jGQ-Ay-x9R" name="value" keyPath="objectValue.label1" id="BkW-PK-UJn"/>
+                            </connections>
                         </textField>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="T9B-bn-J1V">
                             <rect key="frame" x="111" y="-1" width="37" height="14"/>
@@ -151,6 +160,9 @@
                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
+                            <connections>
+                                <binding destination="jGQ-Ay-x9R" name="value" keyPath="objectValue.label2" id="Sg8-Xz-6eY"/>
+                            </connections>
                         </textField>
                     </subviews>
                     <constraints>
@@ -178,7 +190,7 @@
             </connections>
             <point key="canvasLocation" x="445" y="605"/>
         </tableCellView>
-        <tableCellView identifier="degrees" id="a63-cn-NOW" userLabel="degrees" customClass="FloatsTableCellView">
+        <tableCellView identifier="degrees" id="a63-cn-NOW" userLabel="degrees">
             <rect key="frame" x="0.0" y="0.0" width="172" height="17"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -211,7 +223,7 @@
             </connections>
             <point key="canvasLocation" x="445" y="256.5"/>
         </tableCellView>
-        <tableCellView identifier="d" id="f3Z-oW-3C9" userLabel="d" customClass="FloatsTableCellView">
+        <tableCellView identifier="d" id="f3Z-oW-3C9" userLabel="d">
             <rect key="frame" x="0.0" y="0.0" width="172" height="17"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -268,7 +280,7 @@
                 <constraint firstItem="YBc-RN-b4y" firstAttribute="leading" secondItem="toe-NG-Bn9" secondAttribute="leading" id="WrL-bb-Q9Q"/>
             </constraints>
         </tableCellView>
-        <tableCellView identifier="{CGRect={CGPoint=dd}{CGSize=dd}}" id="dHV-ME-csG" userLabel="{CGRect={CGPoint=dd}{CGSize=dd}}" customClass="FloatsTableCellView">
+        <tableCellView identifier="{CGRect={CGPoint=dd}{CGSize=dd}}" id="dHV-ME-csG" userLabel="{CGRect={CGPoint=dd}{CGSize=dd}}">
             <rect key="frame" x="0.0" y="0.0" width="172" height="64"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -318,6 +330,9 @@
                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
+                            <connections>
+                                <binding destination="dHV-ME-csG" name="value" keyPath="objectValue.label1" id="t1J-pc-FGV"/>
+                            </connections>
                         </textField>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="MtY-Av-tje">
                             <rect key="frame" x="111" y="33" width="37" height="14"/>
@@ -326,6 +341,9 @@
                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
+                            <connections>
+                                <binding destination="dHV-ME-csG" name="value" keyPath="objectValue.label2" id="ry7-mj-3Oy"/>
+                            </connections>
                         </textField>
                         <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="i8P-ab-WKn" userLabel="Y" customClass="StepperTextField">
                             <rect key="frame" x="86" y="12" width="86" height="19"/>
@@ -352,6 +370,9 @@
                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
+                            <connections>
+                                <binding destination="dHV-ME-csG" name="value" keyPath="objectValue.label4" id="gSh-gK-M2w"/>
+                            </connections>
                         </textField>
                         <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="zOj-4l-QUh" userLabel="W" customClass="StepperTextField">
                             <rect key="frame" x="0.0" y="12" width="86" height="19"/>
@@ -378,6 +399,9 @@
                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
+                            <connections>
+                                <binding destination="dHV-ME-csG" name="value" keyPath="objectValue.label3" id="qs2-Sg-vzG"/>
+                            </connections>
                         </textField>
                     </subviews>
                     <constraints>
